k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        volumeMounts:
        - name: postgredb
          mountPath: /var/lib/postgresql
      volumes:
      - name: postgredb
        persistentVolumeClaim:
          claimName: postgres-pvc
