k8s/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: vote
